@@ -104,6 +104,8 @@
          Link: ${tdir}/symtest1/symtest2/link3==>
                                            ${tdir}/symtest1/symtest2/file2
          Link: ${tdir}/symtest1/dirlink==>${tdir}/symtest1/symtest3
+         Link: ${tdir}/symtest1/dirlink2==>${tdir}/symtest1/symtest3
+         Link: ${tdir}/symtest1/dirlink3==>${tdir}/symtest1/symtest3
          File: ${tdir}/symtest1/recorded.links
          File: ${tdir}/symtest1/symtest2/recorded.links
     Deletes:
@@ -134,6 +136,12 @@
     <symlink resource="${tdir}/symtest1/symtest3"
              link="${tdir}/symtest1/dirlink"
              failonerror="no" />
+    <symlink resource="${tdir}/symtest1/symtest3" 
+             link="${tdir}/symtest1/dirlink2"
+             failonerror="no"/>
+    <symlink resource="${tdir}/symtest1/symtest3" 
+             link="${tdir}/symtest1/dirlink3"
+             failonerror="no"/>
 
     <sleep seconds="${delay}"/> <!-- make sure OS has time to catch up -->
 
@@ -188,6 +196,11 @@
     <available file="${tdir}/symtest1/dirlink"
                property="test.record.dirlink.created"/>
 
+    <!-- this is redundant for this test, but used in the recreate test -->
+
+    <available file="${tdir}/symtest1/dirlink2" 
+               property="test.record.dirlink2.created"/>
+
     <!-- Test to see if the linkfiles were created -->
 
     <available file="${tdir}/symtest1/recorded.links"
@@ -213,14 +226,26 @@
          Link: ${tdir}/symtest1/link2==>${tdir}/symtest1/symtest2/file2
          Link: ${tdir}/symtest1/symtest2/link3==>
                                            ${tdir}/symtest1/symtest2/file2
-         Link: ${tdir}/sumtest1/dirlink==>${tdir}/symtest1/symtest3
+         Link: ${tdir}/symtest1/dirlink==>${tdir}/symtest1/symtest3
+         Link: ${tdir}/symtest1/dirlink3==>${tdir}/symtest1/symtest3
+
+    Creates
+         Link: ${tdir}/symtest1/dirlink3==>${tdir}/symtest1/symtest2
 
     Recreates:
          Link: ${tdir}/symtest1/link1==>${tdir}/symtest1/file1
          Link: ${tdir}/symtest1/link2==>${tdir}/symtest1/symtest2/file2
          Link: ${tdir}/symtest1/symtest2/link3==>
                                            ${tdir}/symtest1/symtest2/file2
-         Link: ${tdir}/sumtest1/dirlink==>${tdir}/symtest1/symtest3
+         Link: ${tdir}/symtest1/dirlink==>${tdir}/symtest1/symtest3
+
+    Should Change:
+         Link: ${tdir}/symtest1/dirlink3==>${tdir}/symtest1/symtest2
+               to
+               ${tdir}/symtest1/dirlink3==>${tdir}/symtest1/symtest3
+
+    Should Not Create (bug 25181):
+         Link: ${tdir}/symtest1/symtest3/dirlink2==>${tdir}/symtest1/symtest3
   -->
 
   <target name="test-recreate" depends="test-record">
@@ -229,6 +254,16 @@
     <symlink action="delete" link="${tdir}/symtest1/link2"/>
     <symlink action="delete" link="${tdir}/symtest1/symtest2/link3"/>
     <symlink action="delete" link="${tdir}/symtest1/dirlink"/>
+    <!-- dirlink2 intentionally not deleted to test bug 25181 -->
+    <symlink action="delete" link="${tdir}/symtest1/dirlink3"/>
+
+    <sleep seconds="${delay}"/>  <!-- make sure OS has time to catch up -->
+
+    <symlink resource="${tdir}/symtest1/symtest2" 
+             link="${tdir}/symtest1/dirlink3"
+             failonerror="no"/>
+
+    <sleep seconds="${delay}"/>  <!-- make sure OS has time to catch up -->
 
     <available file="${tdir}/symtest1/link1"
                property="test.recreate.link1.not.removed"
@@ -265,6 +300,18 @@
 
     <available file="${tdir}/symtest1/dirlink"
                property="test.recreate.dirlink.recreated"/>
+
+    <!-- this should not get set -->
+    <available file="${tdir}/symtest1/symtest3/symtest3" 
+               property="test.recreate.dirlink2.recreated.twice"
+               value="ERROR: dirlink2 was created a second time (bug 25181)"/>
+
+    <touch file="${tdir}/symtest1/dirlink3/WhereAmI"/>
+
+    <sleep seconds="${delay}"/>  <!-- make sure OS has time to do the execs -->
+
+    <available file="${tdir}/symtest1/symtest3/WhereAmI" 
+               property="test.recreate.dirlink3.was.altered"/>
   </target>
 
 
